# mathtutor

./: .gitattributes  .gitignore  CLAUDE.md  README.md  REVIEW.md  ghichu  render.yaml
backend/: .env.example  migrate.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 040595cbe601_users_them_tao_luc.py  0e5e53d3e3b3_muc_tieu_them_cot_muc_con.py  2929ecbc70fc_baseline_gop_toan_bo_schema_hien_tai.py  e2a75c1c5e82_lop_them_ma_lop_va_ma_het_han.py
backend/app/: config.py  main.py
backend/app/api/: admin.py  auth.py  danh_muc.py  dat_lai.py  de_thi.py  gv.py  hs.py  monitor.py  muc_tieu.py  nhiem_vu.py  problems.py  progress.py  questions_ai.py  sessions.py  thong_bao.py  tom_tat_ly_thuyet.py  tro_giup.py
backend/scripts/: kiem_tra_bieu_thuc_ket_qua.py  migrate_local_to_prod.py
backend/tests/: conftest.py  test_admin.py  test_api_flow.py  test_auth.py  test_ban_do.py  test_bao_cao.py  test_bao_tri.py  test_cas.py  test_chat_tu_do.py  test_chuoi_ngay.py  test_co_khep_vong.py  test_config_safety.py  test_dang_ky_ma_lop.py  test_danh_muc.py  test_dat_lai.py  test_de_bai_ngu_canh.py  test_de_thi.py  test_doc_de_tu_anh.py  test_gan_co_tu_dong.py  test_gioi_han_dung_luong.py  test_guard.py  test_gv.py  test_hieu_qua.py  test_hinh_anh.py  test_hs.py  test_import_cau_hoi.py  test_init_db.py  test_latex.py  test_leak_guard_opening_turn.py  test_llm_client.py  test_llm_quota.py  test_login_throttle.py  test_ly_thuyet.py  test_ma_lop.py  test_matcher.py  test_migrate.py  test_monitor_idor.py  test_muc_tieu.py  test_nhac_gv.py  test_nhiem_vu.py  (+15 more)
(+217 files in other folders)
